tpctk-fs-code/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tpctk-fs-code
  name: tpctk-fs-code
  namespace: the-precast-toolkit-fs
spec:
  selector:
    matchLabels:
      app: tpctk-fs-code
  replicas: 1
  template:
    metadata:
      labels:
        app: tpctk-fs-code
    spec:
      containers:
      - image: linuxserver/code-server:4.5.1
        imagePullPolicy: IfNotPresent
        name: code-server
        volumeMounts:
          - name: tpctk-fs-code-pvc
            mountPath: /config
      volumes:
        - name: tpctk-fs-code-pvc
          persistentVolumeClaim:
            claimName: tpctk-fs-code-pvc
