tpctk-fs-code/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: tpctk-fs-code
 namespace: the-precast-toolkit-fs
spec:
 ports:
 - port: 80
   targetPort: 8443
 selector:
   app: tpctk-fs-code
